# openai-agents-sdk-explorations

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.windsurf/rules/: openai-agents-sdk.md
db/: database.py  init_db.py  models.py
src/ai_agents/: agent_context.py  cgm_reading_collector.py  health_qna_agent.py  identity_verifier.py  meal_planner_agent.py  mood_recorder_agent.py
