[project]
name = "openai-agents-sdk-explorations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "openai-agents>=0.0.16",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
